tests/errors/case_value_nonliteral_type_mismatch.dang
import Test

# Literal coercion only kicks in for syntactic literals. A non-literal value
# (here, the identifier `s`) with a type that differs from the operand's
# type must still fail with a type mismatch.
let s: String! = "https://dang-lang.dev"

pub result = case (homepage) {
  s => "matched"
}
